# robust_distributed_slam_backend

./: CMakeLists.txt  README.md  package.xml
docker/: README.md
docker/deprecated/: Dockerfile
launch/: generic_robot_slam.launch
scripts/: dataset_test.bzz  ros_slam.bzz
scripts/buzz_includes/: pose_graph_optimization.bzz  schedule.bzz
scripts/buzz_includes/dataset_test/: separator.bzz
scripts/buzz_includes/ros/: global_variables.bzz  pose_graph_optimization_trigger.bzz
scripts/config/dataset_test/: buzz_script_parameters.bzz  slam_dataset_parameters.bzz  slam_parameters.bzz
scripts/config/ros/: buzz_script_parameters.bzz  slam_parameters.bzz  slam_ros_parameters.bzz
